<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">shopping</string>
    <!--登陆界面-->
    <string name="account">账号</string>
    <string name="please_input_account">请输入账号</string>
    <string name="password">密码</string>
    <string name="please_input_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="account_or_password_error">账号、密码有误</string>
    <string name="account_cannot_be_empty">账号不能为空</string>
    <string name="password_cannot_be_empty">密码不能为空</string>
    <string name="call_us">联系我们</string>
    <!--主界面-->
    <string name="notice_exist">不敢再点了，再点就退出了！</string>
    <string name="sale">前台销售</string>
    <string name="management">货物信息</string>
    <string name="mine">个人信息</string>
    <string name="scan">扫一扫</string>
    <!--前台销售-->
    <string name="minus">-</string>
    <string name="add">+</string>
    <string name="one">1</string>
    <!--扫描界面-->
    <string name="scan_hint">将二维码放入框内, 即可自动扫描</string>
    <!--添加商品-->
    <string name="add_goods_two_code_error">请输入二维码信息</string>
    <string name="add_goods_name_error">请输入商品名</string>
    <string name="add_goods_spec_error">请输入商品规格</string>
    <!--标题栏-->
    <string name="finish">完成</string>
    <!--上拉加载、下拉刷新控件-->
    <string name="footer_hint_load_normal">Load more</string>
    <string name="footer_hint_load_ready">Release to load more</string>
    <string name="header_hint_refresh_normal">Pull to refresh</string>
    <string name="header_hint_refresh_ready">Release to refresh</string>
    <string name="header_hint_refresh_loading">Refreshing&#8230;</string>
    <string name="header_hint_refresh_time">Time：</string>
    <!--弹出框控件-->
    <string name="please_input_message">请输入</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="dialog_prompt">提示</string>
</resources>
