<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:fitsSystemWindows="true"
              android:orientation="vertical">
    <ImageView
            android:id="@+id/iv_head"
            android:layout_marginTop="@dimen/dp_30"
            android:layout_width="@dimen/dp_70"
            android:layout_height="@dimen/dp_70"
            android:layout_marginBottom="@dimen/dp_35"
            android:background="@drawable/default_head"/>
    <View
            android:layout_height="@dimen/dp_0d5"
            android:layout_width="match_parent"
            android:background="@color/color_d7d7d7"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@color/color_f8f8f8">
        <TextView
                android:gravity="center"
                android:layout_width="@dimen/dp_50"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_23"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/color_222222"
                android:text="@string/account"/>
        <View
                android:layout_height="@dimen/dp_33"
                android:layout_width="@dimen/dp_0d5"
                android:background="@color/color_bfcdd6"/>
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/dp_27">
            <EditText
                    android:id="@+id/et_account"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_42"
                    android:textSize="@dimen/sp_16"
                    android:textColor="@color/color_222222"
                    android:maxLength="11"
                    android:background="@null"
                    android:inputType="number"
                    android:hint="@string/please_input_account"/>
            <ImageView
                    android:id="@+id/iv_account_delete"
                    android:layout_alignParentEnd="true"
                    android:gravity="center_vertical"
                    android:layout_width="@dimen/dp_15"
                    android:layout_height="@dimen/dp_15"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/dp_10"
                    android:background="@drawable/login_account_delete"/>
        </RelativeLayout>
    </LinearLayout>
    <View
            android:layout_height="@dimen/dp_0d5"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/dp_23"
            android:layout_marginRight="@dimen/dp_23"
            android:background="@color/color_bfcdd6"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@color/color_f8f8f8">
        <TextView
                android:gravity="center"
                android:layout_width="@dimen/dp_50"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_23"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/color_222222"
                android:text="@string/password"/>
        <View
                android:layout_height="@dimen/dp_33"
                android:layout_width="@dimen/dp_0d5"
                android:background="@color/color_bfcdd6"/>
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/dp_27">
            <EditText
                    android:id="@+id/et_password"
                    android:gravity="center_vertical"
                    android:layout_centerVertical="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_42"
                    android:layout_marginEnd="@dimen/dp_27"
                    android:inputType="textPassword"
                    android:textSize="@dimen/sp_16"
                    android:textColor="@color/color_222222"
                    android:maxLength="10"
                    android:background="@null"
                    android:hint="@string/please_input_password"/>
            <ImageView
                    android:id="@+id/iv_password_delete"
                    android:layout_alignParentEnd="true"
                    android:gravity="center_vertical"
                    android:layout_width="@dimen/dp_15"
                    android:layout_height="@dimen/dp_15"
                    android:padding="@dimen/dp_10"
                    android:layout_centerVertical="true"
                    android:background="@drawable/login_account_delete"/>
        </RelativeLayout>
    </LinearLayout>
    <View
            android:layout_height="@dimen/dp_0d5"
            android:layout_width="match_parent"
            android:background="@color/color_d7d7d7"/>
    <TextView
            android:id="@+id/tv_login"
            android:gravity="center"
            android:layout_marginTop="@dimen/dp_23"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:text="@string/login"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/color_ffffff"
            android:background="@drawable/login_bt_selector"/>
    <TextView
            android:layout_marginTop="@dimen/dp_23"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_gravity="start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_14"
            android:text="@string/call_us"
            android:textColor="@color/color_38acff"/>
</LinearLayout>