<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/color_ffffff">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_130">
        <LinearLayout
                android:id="@+id/ll_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:padding="@dimen/dp_10">
            <ImageView
                    android:id="@+id/iv_select"
                    android:layout_width="@dimen/dp_16"
                    android:layout_height="@dimen/dp_16"
                    android:src="@drawable/sale_cart_checkbox_selector"/>
        </LinearLayout>
        <ImageView
                android:id="@+id/iv_image"
                android:layout_width="@dimen/dp_85"
                android:layout_height="@dimen/dp_75"
                android:layout_marginEnd="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_20"
                android:scaleType="center"
                android:background="@drawable/goods_xiatiao"/>
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="@dimen/dp_18"
                android:layout_marginTop="@dimen/dp_24">

            <TextView
                    android:id="@+id/tv_goods_name"
                    android:layout_width="@dimen/dp_200"
                    android:layout_height="@dimen/dp_30"
                    android:lineSpacingExtra="@dimen/dp_1"
                    android:textSize="@dimen/sp_12"
                    android:gravity="left"
                    android:background="@drawable/solid_f2f2f2"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:text="新疆库尔勒乡里250g内环细腻，香浓可口个清热圣经多只双扣.真是个完美的好孩子"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_8"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/color_f90301"
                    android:text="￥120元/袋"/>
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_marginTop="@dimen/dp_10">
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentBottom="true"
                        android:layout_height="@dimen/dp_20"
                        android:orientation="horizontal">
                    <TextView
                            android:id="@+id/tv_minus"
                            android:layout_width="@dimen/dp_28"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:textSize="@dimen/sp_12"
                            android:textColor="@color/color_b3b3b3"
                            android:background="@drawable/stroke_b3b3b3"
                            android:text="@string/minus"/>
                    <TextView
                            android:id="@+id/tv_number"
                            android:layout_width="@dimen/dp_28"
                            android:layout_height="match_parent"
                            android:layout_marginStart="@dimen/dp_5"
                            android:layout_marginEnd="@dimen/dp_5"
                            android:gravity="center"
                            android:textSize="@dimen/sp_14"
                            android:textColor="@color/color_ff6700"
                            android:background="@drawable/stroke_38acff"
                            android:text="@string/one"/>
                    <TextView
                            android:id="@+id/tv_add"
                            android:layout_width="@dimen/dp_28"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:textSize="@dimen/sp_12"
                            android:textColor="@color/color_b3b3b3"
                            android:background="@drawable/stroke_b3b3b3"
                            android:text="@string/add"/>
                </LinearLayout>
                <ImageView
                        android:id="@+id/iv_delete"
                        android:layout_width="@dimen/dp_28"
                        android:layout_height="@dimen/dp_20"
                        android:src="@drawable/sale_cart_delete"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
    <View android:layout_width="match_parent"
          android:layout_height="@dimen/dp_0d5"
          android:background="@color/color_b3b3b3"/>
</LinearLayout>